--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "boostrap": "^2.0.0",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
